# beenergy.

Proyecto/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_MANUAL.md  FRONTEND_ERROR_HANDLING.md  README.md  SECURITY.md  ZK_PRIVACY_GUIDE.md  components.json  deploy-simple.ps1  deploy-testnet.ps1  deploy-testnet.sh  environments.toml  eslint.config.js  index.html  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
Proyecto/contracts/community_governance/: Cargo.toml
Proyecto/contracts/energy_distribution/: Cargo.toml
Proyecto/contracts/energy_distribution/src/: lib.rs  privacy.rs
Proyecto/contracts/energy_token/: Cargo.toml
Proyecto/contracts/energy_token/src/: lib.rs
Proyecto/contracts/fungible-allowlist/: Cargo.toml
Proyecto/contracts/fungible-allowlist/src/: contract.rs  lib.rs  test.rs
Proyecto/contracts/guess-the-number/: Cargo.toml
Proyecto/contracts/guess-the-number/src/: error.rs  lib.rs  test.rs  xlm.rs
Proyecto/contracts/nft-enumerable/: Cargo.toml
Proyecto/contracts/nft-enumerable/src/: contract.rs  lib.rs  test.rs
beenergy/: DEPLOY_MANUAL.md  FRONTEND_ERROR_HANDLING.md  README.md  ZK_PRIVACY_GUIDE.md  beeenergy-readme.md  deploy-simple.ps1  deploy-testnet.ps1  deploy-testnet.sh  package-lock.json  package.json  tailwind.config.js
beenergy/contracts/community_governance/: Cargo.toml
beenergy/contracts/community_governance/src/: lib.rs
beenergy/contracts/energy_distribution/: Cargo.toml
beenergy/contracts/energy_distribution/src/: lib.rs  privacy.rs
beenergy/contracts/energy_token/: Cargo.toml
beenergy/contracts/energy_token/src/: lib.rs
beenergy/src/: App.tsx  index.css
beenergy/src/components/ui/: button.tsx  card.tsx
beenergy/src/lib/: constants.ts  types.ts
beenergy/src/pages/: Home.tsx
beenergy/src/pages/beenergy/: ConnectWallet.tsx  Dashboard.tsx  Landing.tsx  Marketplace.tsx
frontend/: .env.example  next.config.mjs  package-lock.json  package.json
frontend/.next/dev/: prerender-manifest.json
frontend/.next/dev/cache/: .rscinfo
frontend/.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/.next/dev/types/: routes.d.ts  validator.ts
frontend/app/: globals.css  page.tsx
frontend/app/activity/: page.tsx
frontend/app/activity/purchases/: page.tsx
frontend/app/activity/sales/: page.tsx
frontend/app/api/defindex/deposit/: route.ts
frontend/app/api/defindex/health/: route.ts
frontend/app/api/defindex/stats/[vaultAddress]/[userAddress]/: route.ts
frontend/app/api/defindex/vault/[address]/: route.ts
frontend/app/api/defindex/withdraw/: route.ts
frontend/app/consumption/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: balance-display.tsx  dashboard-header.tsx  language-selector.tsx  mobile-sidebar.tsx  profile-setup-modal.tsx  sidebar.tsx  success-modal.tsx  theme-toggle.tsx  wallet-confirmation-modal.tsx
frontend/hooks/: useDefindex.ts  useEnergyDistribution.ts  useEnergyToken.ts
frontend/lib/: contracts-config.ts  defindex-service.ts  i18n-context.tsx  mock-data.ts  stellar-config.ts  stellar-wallet.ts  storage.ts  theme-context.tsx  wallet-context.tsx
